<resources>
    <!--  SignIn  -->
    <string name="app_name">LoginApp</string>
    <string name="label_user_id">아이디</string>
    <string name="description_logo_image">로그인 화면에서 보여주는 로고 이미지</string>
    <string name="label_password">비밀번호</string>
    <string name="hint_input_user_id">아이디를 입력하세요.</string>
    <string name="hint_input_password">비밀번호를 입력하세요.</string>
    <string name="btn_label_sign_in">로그인</string>
    <string name="btn_label_sign_up">회원가입</string>

    <!--  SignUp  -->
    <string name="label_user_name">이름</string>
    <string name="hint_input_user_name">이름을 입력하세요 (ex. 홍길동)</string>
    <string name="hint_input_sign_up_user_id">아이디를 입력하세요 (영문자, 숫자만)</string>
    <string name="hint_input_sign_up_password">비밀번호를 입력하세요 (7자리 이상)</string>
    <string name="label_age">나이</string>
    <string name="hint_input_age">나이를 입력하세요 (ex. 25)</string>
    <string name="label_favorite_drink">최애 음료</string>
    <string name="hint_input_favorite_drink">최애 음료를 입력하세요 (ex. 아이스 아메리카노)</string>

    <!--  Home  -->
    <string name="description_home_image">홈 화면에서 랜덤으로 보여주는 커피 이미지</string>
    <string name="format_home_user_id">아이디 : %s</string>
    <string name="format_home_user_name">이름 : %s</string>
    <string name="format_home_age">나이 : %d</string>
    <string name="format_home_favorite_drink">최애 음료 : %s</string>
    <string name="btn_label_close">종료</string>
    <string name="description_button_image">버튼 클릭 시 바뀌는 아이콘 이미지</string>
</resources>