<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/iv_logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/description_logo_image"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_in_user_id_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_user_id"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_image" />

    <EditText
        android:id="@+id/et_input_sign_in_user_id"
        style="@style/AppEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/hint_input_user_id"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/tv_sign_in_user_id_label"
        app:layout_constraintStart_toStartOf="@id/tv_sign_in_user_id_label"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_user_id_label" />

    <TextView
        android:id="@+id/tv_sign_in_password_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/et_input_sign_in_user_id"
        app:layout_constraintStart_toStartOf="@id/et_input_sign_in_user_id"
        app:layout_constraintTop_toBottomOf="@id/et_input_sign_in_user_id" />

    <EditText
        android:id="@+id/et_input_sign_in_password"
        style="@style/AppEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/hint_input_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/tv_sign_in_password_label"
        app:layout_constraintStart_toStartOf="@id/tv_sign_in_password_label"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_password_label" />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/AppButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:text="@string/btn_label_sign_in"
        app:layout_constraintEnd_toEndOf="@id/et_input_sign_in_password"
        app:layout_constraintStart_toStartOf="@id/et_input_sign_in_password"
        app:layout_constraintTop_toBottomOf="@id/et_input_sign_in_password" />

    <Button
        android:id="@+id/btn_go_to_sign_up"
        style="@style/AppButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_label_sign_up"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>